--- a/.github/workflows/learn-github-actions.yaml
+++ b/.github/workflows/learn-github-actions.yaml
@@ -10,7 +10,7 @@ jobs:
     steps:
       - uses: morrisoncole/pr-lint-action@v1.5.0
         with:
-          title-regex: "^((([0-9]+)\.([0-9]+)\.([0-9]+)(?:-([0-9a-zA-Z-]+(?:\.[0-9a-zA-Z-]+)*))?)(?:\+([0-9a-zA-Z-]+(?:\.[0-9a-zA-Z-]+)*))?)+"
+          title-regex: "^[eE][xX]-[0-9]+"
           on-failed-regex-fail-action: false
           on-failed-regex-request-changes: false
           on-failed-regex-create-review: true
