--- a/.github/workflows/learn-github-actions.yaml
+++ b/.github/workflows/learn-github-actions.yaml
@@ -11,7 +11,7 @@ jobs:
       - uses: morrisoncole/pr-lint-action@v1.5.0
         with:
           title-regex: "^[eE][xX]-[0-9]+"
-          on-failed-regex-fail-action: false
+          on-failed-regex-fail-action: true
           on-failed-regex-request-changes: false
           on-failed-regex-create-review: true
           on-failed-regex-comment:
