--- a/.github/workflows/learn-github-actions.yaml
+++ b/.github/workflows/learn-github-actions.yaml
@@ -10,7 +10,7 @@ jobs:
     steps:
       - uses: morrisoncole/pr-lint-action@v1.5.0
         with:
-          title-regex: "^([0-9]+)\.([0-9]+)\.([0-9]+)+"
+          title-regex: "^[0-9].[0-9].[0-9]+"
           on-failed-regex-fail-action: true
           on-failed-regex-request-changes: false
           on-failed-regex-create-review: true
