--- a/.github/workflows/learn-github-actions.yaml
+++ b/.github/workflows/learn-github-actions.yaml
@@ -10,12 +10,12 @@ jobs:
     steps:
       - uses: morrisoncole/pr-lint-action@v1.5.0
         with:
-          title-regex: "^[0-9].[0-9].[0-9]+"
+          title-regex: "^[0-9]+.[0-9]+.[0-9]+ - "
           on-failed-regex-fail-action: true
-          on-failed-regex-request-changes: false
+          on-failed-regex-request-changes: true
           on-failed-regex-create-review: true
           on-failed-regex-comment:
-            "This is just an example. Failed regex: `%regex%`!"
+            "This PR does not begin with a semantic release designation. Each PR into main must begin with [0-"
           repo-token: "${{ secrets.GITHUB_TOKEN }}"
 
   # check-bats-version:
