tiana demo change

--- a/.github/workflows/learn-github-actions.yaml
+++ b/.github/workflows/learn-github-actions.yaml
@@ -15,13 +15,5 @@ jobs:
           on-failed-regex-request-changes: true
           on-failed-regex-create-review: true
           on-failed-regex-comment:
-            "This PR does not begin with a semantic release designation. Each PR into main must begin with [0-"
+            "This PR does not begin with a semantic release designation. Each PR into main must begin with 'x.x.x - '"
           repo-token: "${{ secrets.GITHUB_TOKEN }}"
-
-  # check-bats-version:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #   - uses: actions/checkout@v2
-  #   - uses: deepakputhraya/action-pr-title@master
-  #     with:
-  #       regex: '^((([0-9]+)\.([0-9]+)\.([0-9]+)(?:-([0-9a-zA-Z-]+(?:\.[0-9a-zA-Z-]+)*))?)(?:\+([0-9a-zA-Z-]+(?:\.[0-9a-zA-Z-]+)*))?) - '
