--- a/.github/workflows/pr-linter.yaml
+++ b/.github/workflows/pr-linter.yaml
@@ -19,6 +19,15 @@ jobs:
           on-failed-regex-create-review: true
           on-failed-regex-comment: "This PR does not begin with a release designation. Each PR into main must begin with 'major','minor', or 'fix'"
           repo-token: '${{ secrets.GITHUB_TOKEN }}'
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14.x'
+          # registry-url: 'https://npm.pkg.github.com'
+          # # Defaults to the user or organization that owns the workflow file
+          # scope: '@yembo'
       - name: Install
         run: npm install
       - run: npm lint
