--- a/.github/workflows/pr-linter.yaml
+++ b/.github/workflows/pr-linter.yaml
@@ -30,5 +30,5 @@ jobs:
           # scope: '@yembo'
       - name: Install
         run: npm install
-      - run: npm lint
-      - run: npm format
+      - run: npm run lint
+      - run: npm run format
