--- a/.github/workflows/pr-linter.yaml
+++ b/.github/workflows/pr-linter.yaml
@@ -65,11 +65,11 @@ jobs:
               console.log('currentVer', currentVer)
               // extract if the text in PR title says 'major', 'minor', or 'fix'
               const pr_title = github.event.pull_request.head.ref
-              if (pr_title.search(/^(\bmajor\b/gm)) !== -1) {
+              if (pr_title.search(/^\bmajor\b/gm) !== -1) {
                 console.log('MAJOR meow')
-              } else if (pr_title.search(/^(\minor\b/gm)) !== -1) {
+              } else if (pr_title.search(/^\minor\b/gm) !== -1) {
                 console.log('MINOR woof')
-              } else if (pr_title.search(/^(\fix\b/gm)) !== -1) {
+              } else if (pr_title.search(/^\fix\b/gm) !== -1) {
                 console.log('this is a fix')
               } 
 
