--- a/.github/workflows/pr-linter.yaml
+++ b/.github/workflows/pr-linter.yaml
@@ -59,6 +59,10 @@ jobs:
           script: |
             console.log("HELLO THERE JS IN ACTIONS")
             // grab the current version and split it
+            let currentVer = ${{steps.package-version.outputs.current-version}}
+
+            console.log(typeof currentVer)
+            let currentVerArr = currentVer.split('.')
             // return new version in 0.0.0 format
       - name: Version
         run: npm version ${{steps.to-be-version.outputs.result}}
