--- a/.github/workflows/pr-linter.yaml
+++ b/.github/workflows/pr-linter.yaml
@@ -59,7 +59,7 @@ jobs:
           script: |
             console.log("HELLO THERE JS IN ACTIONS")
             // grab the current version and split it
-            let currentVer = ${{steps.package-version.outputs.current-version}}
+            let currentVer = "${{steps.package-version.outputs.current-version}}"
             console.log(currentVer)
             let currentVerArr = currentVer.split('.')
             // return new version in 0.0.0 format
