--- a/.github/workflows/pr-linter.yaml
+++ b/.github/workflows/pr-linter.yaml
@@ -60,8 +60,32 @@ jobs:
             console.log("HELLO THERE JS IN ACTIONS")
             // grab the current version and split it
             let currentVer = "${{steps.package-version.outputs.current-version}}"
-            console.log(currentVer)
             let currentVerArr = currentVer.split('.')
+
+            let majorSearch = /^\bmajor\b/gm
+            let minorSearch = /^\bminor\b/gm
+            let fixSearch = /^\bfix\b/gm
+            // extract if the text in PR title says 'major', 'minor', or 'fix'
+            const pr_title = github.event.pull_request.head.ref
+            if (pr_title.search(majorSearch) !== -1) {
+              console.log('MAJOR meow')
+              currentVerArr[0] = Number(currentVerArr[0])
+              currentVerArr[0]++
+              currentVerArr[0] = String(currentVerArr[0])
+            } else if (pr_title.search(minorSearch) !== -1) {
+              console.log('MINOR woof')
+              currentVerArr[1] = Number(currentVerArr[1])
+              currentVerArr[1]++
+              currentVerArr[1] = String(currentVerArr[1])
+            } else if (pr_title.search(fixSearch) !== -1) {
+              console.log('this is a fix')
+              currentVerArr[2] = Number(currentVerArr[2])
+              currentVerArr[2]++
+              currentVerArr[2] = String(currentVerArr[2])
+            }
+
             // return new version in 0.0.0 format
+            console.log('final', currentVerArr.join('.') )
+            return currentVerArr.join('.')
       - name: Version
         run: npm version ${{steps.to-be-version.outputs.result}}
