git ref change again and again

--- a/.github/workflows/pr-linter.yaml
+++ b/.github/workflows/pr-linter.yaml
@@ -66,7 +66,8 @@ jobs:
             let minorSearch = /^\bminor\b/gm
             let fixSearch = /^\bfix\b/gm
             // extract if the text in PR title says 'major', 'minor', or 'fix'
-            const pr_title = ${{github.ref}}
+            console.log("working up to here")
+            const pr_title = ${{GITHUB_HEAD_REF}}
             console.log(pr_title)
             if (pr_title.search(majorSearch) !== -1) {
               console.log('MAJOR meow')
