git ref upstream

--- a/.github/workflows/pr-linter.yaml
+++ b/.github/workflows/pr-linter.yaml
@@ -50,6 +50,13 @@ jobs:
       - name: Get Current Version
         id: package-version
         uses: martinbeentjes/npm-get-version-action@master
+      - name: Get PR Title
+        id: pr-title-extract
+        uses: actions/github-script@v3
+        with: 
+          github-token: ${{secrets.GITHUB_TOKEN}}
+          result-encoding: string
+          script: return ${{env.GITHUB_HEAD_REF}}
       - name: Create To-Be Version
         id: to-be-version
         uses: actions/github-script@v3
@@ -67,7 +74,7 @@ jobs:
             let fixSearch = /^\bfix\b/gm
             // extract if the text in PR title says 'major', 'minor', or 'fix'
             console.log("working up to here")
-            const pr_title = ${{env.GITHUB_HEAD_REF}}
+            const pr_title = ${{steps.pr-title-extract.outputs.result}}
             console.log(pr_title)
             if (pr_title.search(majorSearch) !== -1) {
               console.log('MAJOR meow')
