git ref upstream with name

--- a/.github/workflows/pr-linter.yaml
+++ b/.github/workflows/pr-linter.yaml
@@ -56,7 +56,7 @@ jobs:
         with: 
           github-token: ${{secrets.GITHUB_TOKEN}}
           result-encoding: string
-          script: return ${{env.GITHUB_HEAD_REF}}
+          script: return "${{env.GITHUB_EVENT_NAME}}"
       - name: Create To-Be Version
         id: to-be-version
         uses: actions/github-script@v3
