--- a/.github/workflows/pr-linter.yaml
+++ b/.github/workflows/pr-linter.yaml
@@ -42,9 +42,10 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '14.x'
-          # registry-url: 'https://npm.pkg.github.com'
-          # # Defaults to the user or organization that owns the workflow file
+          registry-url: 'https://npm.pkg.github.com'
+          # Defaults to the user or organization that owns the workflow file
           # scope: '@yembo'
+          scope: '@babinowich'
       - name: Install
         run: npm install
       - name: Get Current Version
