--- a/.github/workflows/pr-linter.yaml
+++ b/.github/workflows/pr-linter.yaml
@@ -63,13 +63,9 @@ jobs:
             let currentVer = "${{steps.package-version.outputs.current-version}}"
             let currentVerArr = currentVer.split('.')
             let minorSearch = /^\bminor\b/gm
-            let fixSearch = /^\bfix\b/gm
 
             // extract if the text in PR title says 'major', 'minor', or 'fix'
-            console.log("working up to here")
             const pr_title = "${{github.event.pull_request.title}}"
-            console.log(pr_title)
-            console.log(currentVerArr)
             if (pr_title.search(/^\bmajor\b/gm) !== -1) {
               currentVerArr[0] = Number(currentVerArr[0])
               currentVerArr[0]++
@@ -78,7 +74,7 @@ jobs:
               currentVerArr[1] = Number(currentVerArr[1])
               currentVerArr[1]++
               currentVerArr[1] = String(currentVerArr[1])
-            } else if (pr_title.search(fixSearch) !== -1) {
+            } else if (pr_title.search(/^\bfix\b/gm) !== -1) {
               currentVerArr[2] = Number(currentVerArr[2])
               currentVerArr[2]++
               currentVerArr[2] = String(currentVerArr[2])
@@ -91,3 +87,5 @@ jobs:
             return currentVerArr.join('.')
       - name: Version
         run: npm version ${{steps.to-be-version.outputs.result}}
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
