--- a/.github/workflows/pr-linter.yaml
+++ b/.github/workflows/pr-linter.yaml
@@ -62,7 +62,6 @@ jobs:
             // grab the current version and split it
             let currentVer = "${{steps.package-version.outputs.current-version}}"
             let currentVerArr = currentVer.split('.')
-            let minorSearch = /^\bminor\b/gm
 
             // extract if the text in PR title says 'major', 'minor', or 'fix'
             const pr_title = "${{github.event.pull_request.title}}"
@@ -70,7 +69,7 @@ jobs:
               currentVerArr[0] = Number(currentVerArr[0])
               currentVerArr[0]++
               currentVerArr[0] = String(currentVerArr[0])
-            } else if (pr_title.search(minorSearch) !== -1) {
+            } else if (pr_title.search(/^\bminor\b/gm) !== -1) {
               currentVerArr[1] = Number(currentVerArr[1])
               currentVerArr[1]++
               currentVerArr[1] = String(currentVerArr[1])
