--- a/.github/workflows/publish-package.yaml
+++ b/.github/workflows/publish-package.yaml
@@ -64,6 +64,10 @@ jobs:
             // return new version in 0.0.0 format
             console.log('final', currentVerArr.join('.') )
             return currentVerArr.join('.')
+      - name: Configure Git AGAIN
+        run: |
+          git add .
+          git status
       - name: Version & Push back to git
         run: npm version ${{steps.to-be-version.outputs.result}} -m "Release ${{steps.to-be-version.outputs.result}} 🚀" --force
         env:
