--- a/.github/workflows/publish-package.yaml
+++ b/.github/workflows/publish-package.yaml
@@ -64,15 +64,19 @@ jobs:
             // return new version in 0.0.0 format
             console.log('final', currentVerArr.join('.') )
             return currentVerArr.join('.')
-      - name: Configure Git AGAIN
-        run: |
-          git add .
-          git status
-      - name: Version & Push back to git
-        run: | 
-          npm version ${{steps.to-be-version.outputs.result}} -m "Release ${{steps.to-be-version.outputs.result}} 🚀"
-          git status
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # - name: Configure Git AGAIN
+      #   run: |
+      #     git add .
+      #     git status
+      # - name: Version & Push back to git
+      #   run: | 
+      #     npm version ${{steps.to-be-version.outputs.result}} -m "Release ${{steps.to-be-version.outputs.result}} 🚀"
+      #     git status
+      #   env:
+      #     NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: 'change version'
+        uses: reedyuk/npm-version@1.0.2
+        with:
+          version: ${{steps.to-be-version.outputs.result}}
       - run: git status
       # - run: git push origin HEAD:<name-of-remote-branch>
