--- a/.github/workflows/publish-package.yaml
+++ b/.github/workflows/publish-package.yaml
@@ -68,19 +68,23 @@ jobs:
       #   run: |
       #     git add .
       #     git status
-      # - name: Version & Push back to git
-      #   run: | 
-      #     npm version ${{steps.to-be-version.outputs.result}} -m "Release ${{steps.to-be-version.outputs.result}} 🚀"
-      #     git status
-      #   env:
-      #     NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: 'change version'
-        uses: reedyuk/npm-version@1.0.2
-        with:
-          version: ${{steps.to-be-version.outputs.result}}
-      - run: | 
+    - name: Reattach HEAD
+      run: git checkout "$(echo ${{ github.ref }} | sed -E 's|refs/[a-zA-Z]+/||')"
+      - name: Version & Push back to git
+        run: | 
+          npm version ${{steps.to-be-version.outputs.result}} -m "Release ${{steps.to-be-version.outputs.result}} 🚀"
           git status
-          git add .
-          git commit -a -m "Release ${{steps.to-be-version.outputs.result}} 🚀"
-          git push origin ${{ github.head_ref }}
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # - name: 'change version'
+      #   uses: reedyuk/npm-version@1.0.2
+      #   with:
+      #     version: ${{steps.to-be-version.outputs.result}}
+      # - run: | 
+      #     git status
+      #     git add .
+      #     git commit -a -m "Release ${{steps.to-be-version.outputs.result}} 🚀"
+      #     git branch temp
+      #     git checkout 
+      #     git push origin 
       # - run: git push origin HEAD:<name-of-remote-branch>
