--- a/.github/workflows/publish-package.yaml
+++ b/.github/workflows/publish-package.yaml
@@ -1,20 +1,17 @@
 name: Publish & Package
 on:
-  # release:
-  #   types: [created]
-  push:
-    branches: [main]
   pull_request:
-    types: [opened, edited, reopened, synchronize]
-    branches:
-      - main
+    types: closed
 jobs:
   package:
     runs-on: ubuntu-latest
+    if: github.event.pull_request.merged
     steps:
       - name: Checkout
         uses: actions/checkout@v2
       # Setup .npmrc file to publish to GitHub Packages
+        with:
+          ref: refs/heads/main
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
@@ -27,6 +24,7 @@ jobs:
         run: |
           git config user.email "kyle-bot@nothing.bot"
           git config user.name "Version Bumper 🚀"
+          git remote add gh-origin https://${GITHUB_ACTOR}:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
       - name: Install
         run: npm install
       - name: Get Current Version
@@ -64,16 +62,12 @@ jobs:
             // return new version in 0.0.0 format
             console.log('final', currentVerArr.join('.') )
             return currentVerArr.join('.')
-      # - name: Configure Git AGAIN
-      #   run: |
-      #     git add .
-      #     git status
-      - name: Prepare repository
-        run: git checkout "${GITHUB_REF:11}"
       - name: Version & Push back to git
         run: | 
-          npm version ${{steps.to-be-version.outputs.result}} -m "Release ${{steps.to-be-version.outputs.result}} 🚀"
+          npm run prerelease
+          npm version ${{steps.to-be-version.outputs.result}} -m "Release ${{steps.to-be-version.outputs.result}} 🚀" --force
           git status
+          git push gh-origin HEAD:master --tags
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       # - name: 'change version'
